add and update dao layer